Fix CardOverlay header shrinking when too much content was added after
https://coveord.atlassian.net/browse/JSUI-862

--- a/sass/_CardOverlay.scss
+++ b/sass/_CardOverlay.scss
@@ -45,6 +45,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-shrink: 0;
 
   font-size: 11px;
   text-transform: uppercase;
@@ -65,4 +66,5 @@
   text-align: center;
   margin-top: auto;
   cursor: pointer;
+  flex-shrink: 0;
 }
